--- a/index.html
+++ b/index.html
@@ -1,18 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Weekly Menu</title>
+
+<style>
+    body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+        background: #f4f6fb;
+        margin: 0;
+        padding: 20px;
+    }
+
+    .container {
+        max-width: 420px;
+        background: white;
+        padding: 28px;
+        border-radius: 18px;
+        box-shadow: 0 6px 25px rgba(0,0,0,0.08);
+        margin: auto;
+    }
+
+    h1 {
+        font-size: 22px;
+        margin-bottom: 6px;
+    }
+
+    p {
+        color: #444;
+        line-height: 1.45;
+        font-size: 15px;
+    }
+
+    label {
+        font-size: 14px;
+        font-weight: 600;
+        margin-top: 18px;
+        display: block;
+    }
+
+    input {
+        width: 100%;
+        padding: 12px;
+        border-radius: 8px;
+        border: 1px solid #ccc;
+        font-size: 15px;
+        margin-top: 6px;
+    }
+
+    .btn {
+        width: 100%;
+        padding: 14px;
+        background: #007bff;
+        border: none;
+        color: white;
+        font-size: 16px;
+        border-radius: 8px;
+        margin-top: 26px;
+        cursor: pointer;
+        font-weight: 600;
+    }
+
+    .btn:hover {
+        background: #005fcc;
+    }
+
+    .btn-secondary {
+        margin-top: 12px;
+        background: #e6e6e6;
+        color: #333;
+    }
+</style>
+
+<script>
+function redirectToAwareness() {
+    window.location.href = "awareness.html";
+}
+</script>
+
 </head>
 <body>
-<h2>Weekly Menu for Employees – check what's cooking!</h2>
-<p>Discover this week’s lunch & dinner options.</p>
-<form action="awareness.html">
-<label>Email or username</label><br>
-<input type="text" name="email"><br>
-<label>Password</label><br>
-<input type="password" name="pw"><br>
-<button type="submit">View menu</button>
-</form>
+
+<div class="container">
+    <h1>⭐ Weekly Menu for Employees — check what’s cooking!</h1>
+
+    <p>Discover this week’s lunch & dinner options.  
+    Get a quick overview of what’s on the menu—it only takes a few seconds.</p>
+
+    <p>This service is exclusively for employees.  
+    Simply enter your email address to access the weekly menu overview.</p>
+
+    <label>Email or username</label>
+    <input type="text" placeholder="your.name@example.com" />
+
+    <label>Your employee password</label>
+    <input type="password" placeholder="Password" />
+
+    <button class="btn" onclick="redirectToAwareness()">View menu</button>
+    <button class="btn btn-secondary" onclick="document.querySelectorAll('input').forEach(i => i.value='')">Reset</button>
+</div>
+
 </body>
 </html>
